<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) TernUp Research Labs
  ~
  ~ This file is part of Caddisfly
  ~
  ~ Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~ the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~ either version 3 of the License or any later version.
  ~
  ~ Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU Affero General Public License included below for more details.
  ~
  ~ The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->
<resources>
    <string name="app_name">Caddisfly</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="bacteriaTest">Bacteria Test</string>
    <string name="swatches">Swatches</string>
    <string name="fluoride">Fluoride</string>
    <string name="bacteria">Bacteria</string>
    <string name="pH">pH</string>
    <string name="calibrate">Calibrate</string>
    <string name="working">Working</string>
    <string name="analyzingWait">Analysing…</string>
    <string name="send">Send</string>
    <string name="photo">Photo</string>
    <string name="delete">Delete</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="calibrate_info">Place a cartridge filled with a standard solution and press OK
    </string>
    <string name="noData">No locations yet.\n\nPress \'New Location\' button</string>
    <string name="interval_info">Duration to wait after each analysis</string>
    <string name="details">Details</string>
    <string name="selectNumberOfTests">Select how many times to analyze</string>
    <string name="appUpdate">Caddisfly update</string>
    <string name="askForUpdate">An updated version is available, Do you want to update now?</string>
    <string name="reset">Reset</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="checkUpdate">Check update</string>
    <string name="internetConnectionRequired">Internet connection is required. Connect to a data
        network.
    </string>
    <string name="dataConnection">Data Connection</string>
    <string name="testInProgress">Test in progress</string>
    <string name="alreadyHaveLatest">You already have the latest version of Caddisfly installed
    </string>
    <string name="ampersand">&amp;</string>
    <string name="remaining">remaining</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="result">Result</string>
    <string name="home">Home</string>
    <string name="rgb">rgb</string>
    <string name="ppm">ppm</string>
    <string name="selectTestType">Select type</string>
    <string name="twentyFourHourTime">HH:mm:ss</string>
    <string name="twelveHourTime">h:mm:ss a</string>
    <string name="analysisCount">Analysis count</string>
    <string name="checkingForUpdates">Checking for updates…</string>
    <string name="place">Place</string>
    <string name="sourceType">Source type</string>
    <string name="selectSourceType">Select Source Type</string>
    <string name="waterQualitySystem">Water Quality System</string>
    <string name="starting">Starting…</string>
    <string name="general">General</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="outOfRange">Color out of range</string>
    <string name="help">Help</string>
    <string name="soundAlarm">Alarm when shake needed</string>
    <string name="soundAlarmSummary">An alarm to notify that a shake is needed before each
        analysis.
    </string>
    <string name="selectedWillBeDeleted">Selected items will be deleted</string>
    <string name="language">Language</string>
    <string name="interval">Interval</string>
    <string name="intervalMinutes">Interval (minutes)</string>
    <string name="futureFeature">Future Feature</string>
    <string name="featureNotImplemented">Feature not yet implemented</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="prototype">Prototype</string>
    <string name="alpha">Alpha</string>

    <!-- time ago strings -->
    <string name="just_now">just now</string>
    <string name="yesterday">yesterday</string>
    <string name="locale">Locale</string>
    <string name="testFailedMessage">Solution color out of range. Check cartridge placement.
    </string>
    <string name="testFailedQualityMessage">Photo quality below %d%%. Check cartridge placement.
    </string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="dayTheme">Day Theme</string>
    <string name="nightTheme">Night Theme</string>
    <string name="newLocation">New Location</string>
    <string name="notes">Notes</string>
    <string name="selectLocation">Select location for test</string>
    <string name="locationDetails">Location Details</string>

    <string-array name="source_types">
        <item>Hand Pump</item>
        <item>Tube Well</item>
        <item>River / Stream</item>
        <item>Open Well</item>
        <item>Domestic Tap</item>
        <item>Reservoir / Pond / Lake</item>
        <item>Industrial</item>
        <item>Other</item>
    </string-array>

    <string name="camera">Camera</string>
    <string name="cameraZoom">Camera Zoom</string>
    <string name="zoom">Zoom (obsolete)</string>
    <string name="done">Done</string>
    <string name="other">Other</string>
    <string name="locations">Locations</string>
    <string name="startNewTest">Start New Test</string>
    <string name="closeLocationSurvey">This survey will be closed and data entered will be lost
    </string>
    <string name="closeSurvey">Close Survey</string>
    <string name="incomplete">Incomplete</string>
    <string name="incompleteMessage">Please enter a place name</string>
    <string name="gettingUpdate">Getting Caddisfly update…</string>
    <string name="calibrate_error">Device not yet calibrated or there are errors. Calibrate this
        device before running the test
    </string>
    <string name="result_sent">Test details successfully sent to the server</string>
    <string name="success">Success</string>
    <string name="send_failed">Send failed due to server problem. Try again later.</string>
    <string name="productName">Akvo FLOW</string>
    <string name="enableInternet">Please enable wireless internet or mobile data connection</string>
    <string name="noInternet">Internet connection not found</string>
    <string name="photoQuality">Photo quality</string>
    <string name="photoQualityError">Error: Photo quality too low</string>
    <string name="waterSourceLocation">Water Source Location</string>
    <string name="standNearWaterSource">Stand near the water source.</string>
    <string name="ensureClearViewForGPS">Ensure that there is a clear view of the sky to receive GPS
        signals
    </string>
    <string name="getLocation">Get Location</string>
    <string name="gettingLocation">Getting location…</string>
    <string name="takeSourcePhoto">Take Photo of Water Source</string>
    <string name="connecting">Connecting…</string>
    <string name="analyze">Analyze</string>
    <string name="playCameraSound">Camera sound</string>
    <string name="fluoride2">Fluoride Easy</string>
    <string name="autoAnalyze">Auto Analyze on Preview</string>
    <string name="street">Street</string>
    <string name="town">Town</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="minPhotoQuality">Minimum Photo Quality</string>
    <string name="cloudy">Cloudy</string>
    <string name="torchMode">Torch Mode</string>
    <string name="infinity">Infinity</string>
    <string name="clickAnalyze">Click Analyze to continue</string>
    <string name="notCalibrated">Not Calibrated</string>
    <string name="edit">Edit</string>
    <string name="samplingCount">Sampling Count</string>
    <string name="selectNumberOfSamples">Number of times the solution should be sampled</string>
    <string name="developer">Developer</string>
    <string name="samplingSummary">photos will be taken for each analysis. Result will be an
        average.
    </string>
    <string name="enterColorRgb">Enter color rgb</string>
    <string name="saveOriginalPhoto">Save Original Photo</string>
    <string name="saveOriginalPhotoConfirm">Warning: Saving original photos will use a lot of space
        on your phone.
    </string>
    <string name="photoSampleDimensionMessage">Select the length to crop the photo for analysis
    </string>
    <string name="photoSampleDimension">Photo Sample Dimension</string>
</resources>
