<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) TernUp Research Labs
  ~
  ~ This file is part of Caddisfly
  ~
  ~ Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~ the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~ either version 3 of the License or any later version.
  ~
  ~ Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU Affero General Public License included below for more details.
  ~
  ~ The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:background="?windowBackground"
             android:orientation="vertical"
             tools:ignore="Overdraw">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:background="@drawable/home_logo"
            android:contentDescription="@null"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productName"
            android:gravity="center"
            android:textSize="19dp"
            android:layout_marginRight="78dp"
            android:layout_marginTop="8dp"
            android:alpha="0.9"
            android:textColor="?textColor"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            tools:ignore="SpUsage,UnusedAttribute"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="35dp"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:alpha="0.9"
            android:textColor="?textColor"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            tools:ignore="SpUsage,UnusedAttribute"/>

    <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:alpha="0.5"
            android:layout_gravity="center_horizontal"
            android:background="#dd746e64"
            android:layout_marginTop="65dp"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waterQualitySystem"
            android:gravity="center"
            android:textSize="15dp"
            android:textAllCaps="true"
            android:layout_marginTop="67dp"
            android:textColor="?subtitleTextStyle"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            tools:ignore="SpUsage,UnusedAttribute"/>

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:alpha="0.0"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal"
            android:drawablePadding="-10dp"
            android:scaleType="matrix"
            android:contentDescription="@null"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?backgroundColor"
                android:paddingBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">

            <Button
                    android:id="@+id/selectLocationButton"
                    android:text="@string/locations"
                    android:textSize="24sp"
                    android:padding="25dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/blue_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="#fff"
                    android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?backgroundColor"
                android:paddingBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">

            <Button
                    android:id="@+id/addLocationButton"
                    android:text="@string/newLocation"
                    android:textSize="24sp"
                    android:padding="25dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/green_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="#fff"
                    android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:background="?backgroundColor"
                android:paddingBottom="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">

            <Button
                    android:id="@+id/historyButton"
                    android:drawableTop="@android:drawable/ic_menu_recent_history"
                    android:text="@string/recent"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/orange_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="#fff"
                    android:layout_marginRight="1dp"/>

            <Button
                    android:id="@+id/calibrateButton"
                    android:drawableTop="@android:drawable/ic_menu_compass"
                    android:text="@string/calibrate"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/red_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="#fff"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"/>

            <Button
                    android:id="@+id/helpButton"
                    android:drawableTop="@android:drawable/ic_menu_help"
                    android:text="@string/help"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/yellow_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:textColor="#fff"
                    android:layout_marginLeft="1dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
