<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) TernUp Research Labs
  ~
  ~ This file is part of Caddisfly
  ~
  ~ Caddisfly is free software: you can redistribute it and modify it under the terms of
  ~ the GNU Affero General Public License (AGPL) as published by the Free Software Foundation,
  ~ either version 3 of the License or any later version.
  ~
  ~ Caddisfly is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU Affero General Public License included below for more details.
  ~
  ~ The full license text can also be seen at <http://www.gnu.org/licenses/agpl.html>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="?cardBackground">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/placeTextView"/>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/addressTextView"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/address2TextView"/>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:id="@+id/sourceTextView"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/resultPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="15dp"
                android:paddingBottom="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="?cardBackground"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false">
            <Button
                    android:id="@+id/newTestButton"
                    android:background="@drawable/green_button"
                    android:textColor="#eee"
                    android:text="@string/startNewTest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp">
            </Button>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="?cardBackground"
                android:visibility="gone">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="20sp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="?cardBackground">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    android:textSize="20sp"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                    android:id="@+id/notesTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:lineSpacingExtra="2sp"
                    />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:layout_marginTop="5dp"
                android:layout_marginBottom="80dp"
                android:scrollbars="none">

            <ImageView
                    android:id="@+id/photoImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@null"
                    />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
